
--- Release version 3.58 14.08.2009 -------------------------------------
1. Ruby CLI interface
2. Win64 fixes

--- Release version 3.59 26.11.2009 -------------------------------------
1. Support case insensitive string fields
2. Support user defined comparators for string and array fields (specified using dbFieldDescriptor::comparator method)
3. Support comparison operations for array types
4. Support indices for array types
5. Debug locks mode (DEBUG_LOCKS in config.h)
6. User defined hash functions

--- Release version 3.60 21.12.2009 -------------------------------------
1. Make it possible to pass in query pointers to rectangle and user defined types
2. Fix ftok collision problems
3. Add dbDatabase::getUsedDatabaseSize() method
4. Catch FastDB C++ exceptions in localcli

--- Release version 3.61 21.03.2010 -------------------------------------
1. Fix DLL building issues in VS project files
2. Correctly handle storage extension attempt failure
3. Use dynamic allocation for string literal in query parser (avoid stack overflow in embedded
   systems)
4. Replace int8 with db_int8

--- Release version 3.62 06.06.2010 -------------------------------------
1. UTF-8 fixes
2. Fix bugs in error reporting

--- Release version 3.63 24.07.2010 -------------------------------------
1. Add dbFile::force_read flag to force sequential reading of the whole database file in memory.
2. Borland C++ compatibility fixes 
3. Fix bug in alter schema CLI function

--- Release version 3.64 23.08.2010 -------------------------------------
1. Add support of transaction logging

--- Release version 3.65 11.11.2010 -------------------------------------
1. MacOS incompatibility fixes (patch provded by Clemens Hintze <c.hintze@gmx.net>)

--- Release version 3.66 ??.01.2011 -------------------------------------
1. Change return type of select method to be able to selcet more than 2Gb records
2. Patch of SubSQL HTML dump done by Christen Volker improving visualisation of large arrays